--- a/sass/demo.scss
+++ b/sass/demo.scss
@@ -6,7 +6,33 @@
 // Layout
 // ------
 
-[role="banner"] { @extend %fixed-banner; }
+[role="banner"] {
+  @extend %fixed-banner;
+
+  .brand, .meta {
+    float: left;
+    width: 50%;
+  }
+  .vcard {
+    display: inline-block;
+  }
+  .org {
+    @include after(": What's Possible") { font-weight: normal; }
+  }
+
+  .meta {
+    float: right;
+    margin-left: -1em;
+    text-align: right;
+    .vcard {
+      @include transition(opacity 300ms);
+      opacity: 1;
+      margin-left: 1em;
+      &.empty { display: none; }
+    }
+  }
+}
+
 
 // Patterns
 // --------
