--- a/templates/teacher_detail.html
+++ b/templates/teacher_detail.html
@@ -1,5 +1,30 @@
 {% extends "base_site.html" %}
 
 {% block main %}
-  Teacher Detail.
+<article class="teacher-detail">
+  <h1 class="teacher-name">{ Teacher Name }</h1>
+
+  <form class="story-form">
+    <div class="formfield body-field">
+      <label for="body-field" class="form-type">Leave a story for { Teacher Name }</label>
+      <textarea name="body" id="body-field" class="form-value" required></textarea>
+    </div>
+    <div class="formfield private-field">
+      <input type="checkbox" name="private" id="private-field" value="private" class="form-value" />
+      <label for="private-field" class="form-type">Keep this story private</label>
+    </div>
+    <div class="formfield name-field optional">
+      <label for="name-field">Name</label>
+      <input type="text" id="name-field" name="name" />
+    </div>
+    <div class="formfield email-field optional">
+      <label for="email-field">Email</label>
+      <input type="email" id="email-field" name="email" />
+    </div>
+
+    <div class="form-actions">
+      <button class="primary-action">Send</button>
+    </div>
+  </form>
+</article>
 {% endblock %}
