Add rough readability to content templates

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -35,6 +35,11 @@
 @import "layout/banner";
 @import "layout/main";
 
+// Patterns
+// --------
+
+@import "patterns/toggle-content";
+
 // Modules
 // -------
 
