--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -2,3 +2,10 @@
 // ======
 
 @import "site";
+
+// Modules
+// -------
+
+@import "modules/teacher-detail";
+@import "modules/add-story";
+@import "modules/story";
