--- a/templates/teacher_detail.html
+++ b/templates/teacher_detail.html
@@ -23,7 +23,7 @@
   <input type="checkbox" id="story-form-toggle" checked/>
   <label for="story-form-toggle">Hide Form</label>
 
-  <form class="story-form">
+  <form class="add-story-form">
     <div class="formfield body-field">
       <label for="body-field" class="form-type">Leave a story for { Teacher Name }</label>
       <textarea name="body" id="body-field" class="form-value" required></textarea>
