--- a/sass/general/_type.scss
+++ b/sass/general/_type.scss
@@ -23,11 +23,11 @@ a {
 
 .alt-text { @include gone; }
 
-// Type
-// ----
+// Headers
+// -------
 
-%type {
-  h2 {
+%headers {
+  h1 {
     @include serif;
     @include adjust-font-size-to($xlargepx);
     a {
@@ -36,38 +36,26 @@ a {
     }
   }
 
-  h3 {
+  h2 {
     @include trailer(.5);
     text-transform: uppercase;
   }
 
-  h4 { @include leader; }
+  h3 {
+    @include leader;
+    font-weight: bold;
+  }
+}
 
-  h4, strong { font-weight: bold; }
+// Type
+// ----
+
+%type {
+  strong { font-weight: bold; }
   em { font-style: italic; }
 
   p, ul, ol, pre { @include trailer; }
 
   ul { list-style: disc; }
   ol { list-style: decimal; }
-
-  code, .code {
-    @include mono;
-    @include adjust-font-size-to($xxsmallpx,1);
-  }
-
-  code {
-    display: inline-block;
-    padding: 0 .5em;
-    background: color($blue darker,.125);
-  }
-
-  .code {
-    @include adjust-leading-to(.75);
-    @include trailer;
-    @include box-shadow($base 0 0 .25em inset);
-    overflow: auto;
-    padding: rhythm(.5) rhythm(.75);
-    border-left: rhythm(.25) solid color($blue darkest,.25);
-  }
 }
