--- a/sass/general/forms/_inputs.scss
+++ b/sass/general/forms/_inputs.scss
@@ -1,15 +1,29 @@
 // Inputs
 // ------
 
-%input {
+%textbox {
   @include rhythm-borders(1px,.25);
   @include adjust-font-size-to($xsmallpx);
   display: block;
   width: 100%;
   border-color: color(lighter);
+}
+
+%input {
+  @extend %textbox;
   height: rhythm(1.5);
+}
+
+%textarea {
+  @extend %textbox;
+  min-height: rhythm(3.5);
+  resize: vertical;
 }
 
 [type="text"], [type="email"], [type="password"] {
   @extend %input;
+}
+
+textarea {
+  @extend %textarea;
 }
