--- a/static/css/demo.css
+++ b/static/css/demo.css
@@ -202,6 +202,7 @@ button {
   vertical-align: baseline;
   background: none;
   color: inherit;
+  cursor: pointer;
 }
 
 .primary-action, .demo button, .demo .next-button {
@@ -287,6 +288,10 @@ button {
 textarea {
   min-height: 4.47222rem;
   resize: vertical;
+}
+
+label {
+  cursor: pointer;
 }
 
 [role="banner"] {
