--- a/templates/_story.html
+++ b/templates/_story.html
@@ -1,4 +1,4 @@
-<input type="checkbox" id="private-{{ story_id }}">
+<input type="checkbox" id="mark-private-{{ story_id }}">
 <article class="story">
   <div class="story-body">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -13,7 +13,7 @@
 
   {# if user == teacher #}
   <div class="story-actions">
-    <label for="private-{{ story_id }}">Private</label>
+    <label for="mark-private-{{ story_id }}">Private</label>
     <button class="delete-story">Delete</button>
   </div>
 </article>
