--- a/templates/teacher_detail.html
+++ b/templates/teacher_detail.html
@@ -27,8 +27,8 @@
 
   {# Stories #}
   <section class="teacher-stories">
-    {% include "_story.html" with story_id=1 %}
-    {% include "_story.html" with story_id=2 %}
+    {% include "_story.html" with story_status='public' %}
+    {% include "_story.html" with story_status='private' %}
   </section>
 </article>
 {% endblock %}
