--- a/templates/base.html
+++ b/templates/base.html
@@ -48,15 +48,17 @@
   <!-- Page-Specific Head -->
   {% block extrahead %}{% endblock %}
 
+  {% if GOOGLE_ANALYTICS_ID %}
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-41317421-1', 'theknetwork.org');
+    ga('create', '{{ GOOGLE_ANALYTICS_ID }}', 'theknetwork.org');
     ga('send', 'pageview');
   </script>
+  {% endif %}
 
 </head>
 
