Make button text clearer: action, not current state.

--- a/templates/_story.html
+++ b/templates/_story.html
@@ -13,9 +13,9 @@
   {# if user == teacher #}
   <div class="story-actions">
     {% if story_status == 'public' %}
-      <button class="story-status to-private">Private</label>
+      <button class="story-status to-private">Make Private</label>
     {% else %}
-      <button class="story-status to-public">Public</label>
+      <button class="story-status to-public">Make Public</label>
     {% endif %}
     <button class="delete-story">Delete</button>
   </div>
