Move teacher-detail view into teachers app, not stories app.

--- a/templates/teacher_detail.html
+++ b/templates/teacher_detail.html
@@ -14,7 +14,7 @@
       </li>
       {% endif %}
       <li class="membership">
-        <b class="type">Member Since:</b>
+        <b class="type">KNet Member Since:</b>
         <span class="value">{{ teacher.date_joined|date }}</span>
       </li>
     </ul>
