--- a/templates/_add_story_form.html
+++ b/templates/_add_story_form.html
@@ -1,12 +1,15 @@
 <form class="add-story-form" method="POST">
   {% csrf_token %}
   {% include "forms/errors.html" with errors=form.non_field_errors %}
+
   {% with label="Leave a story for "|add:teacher.get_name %}
-  {% include "forms/div.html" with field=form.body label=label %}
+  {% include "forms/formfield.html" with field=form.body label=label %}
   {% endwith %}
-  {% include "forms/div.html" with field=form.private label="Keep this story private" %}
-  {% include "forms/div.html" with field=form.submitter_name label="Name" %}
-  {% include "forms/div.html" with field=form.submitter_email label="Email" %}
+
+  {% include "forms/formfield.html" with field=form.private label="Keep this story private" %}
+  {% include "forms/formfield.html" with field=form.submitter_name label="Name" %}
+  {% include "forms/formfield.html" with field=form.submitter_email label="Email" %}
+
   <div class="form-actions">
     <button class="primary-action" type="submit" name="submit">Send</button>
   </div>
