--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,8 @@
 {% compressed_css "landing" %}
 {% endblock styles %}
 
+{% block top %}{% endblock %}
+
 {% block main %}
 <div class="landing">
   <header>
